<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy_tester</name>
  <version>0.0.2</version>
  <description>Simple GUI tool for testing joysticks/gamepads</description>
  <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
  <license>Apache License 2.0</license>


  <depend>sensor_msgs</depend>
  <depend>python3-tk</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
